k8s/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: onlineeventbooking-shahmeer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: 22i1048/booking_service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbooking-shahmeer
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  type: ClusterIP
