k8s/deployment-service-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-databases
  namespace: onlineeventbooking-shahmeer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-databases
  template:
    metadata:
      labels:
        app: postgres-databases
    spec:
      containers:
        - name: postgres-user
          image: postgres:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432  # Port for postgres-user
          volumeMounts:
            - name: pg-user-storage
              mountPath: /var/lib/postgresql/data

        - name: postgres-booking
          image: postgres:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5433  # Ensure this matches the internal port
          volumeMounts:
            - name: pg-booking-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: pg-user-storage
          persistentVolumeClaim:
            claimName: pg-user-pvc
        - name: pg-booking-storage
          persistentVolumeClaim:
            claimName: pg-booking-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  namespace: onlineeventbooking-shahmeer
spec:
  selector:
    app: postgres-databases
  ports:
    - protocol: TCP
      port: 5432  # Port for postgres-user
      targetPort: 5432
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-booking
  namespace: onlineeventbooking-shahmeer
spec:
  selector:
    app: postgres-databases
  ports:
    - protocol: TCP
      port: 5433  # Port for postgres-booking
      targetPort: 5433
  type: ClusterIP
