k8s/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: onlineeventbooking-shahmeer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: 22i1048/event_service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbooking-shahmeer
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
