k8s/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: onlineeventbooking-shahmeer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 22i1048/notification_service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbooking-shahmeer
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
  type: ClusterIP
